@@ -49,8 +49,9 @@ if len(args) >= 2:
 
 ## Load the Professor machinery
 import professor2 as prof
+from professor2 import ui
 if not opts.QUIET:
-    print(prof.logo)
+    print(prof.ui.logo)
 
 ## No point in going further if YODA isn't available, too
 try:
@@ -65,14 +66,14 @@ import glob
 # TODO: add runcomb file parsing to select a runs subset
 INDIRS = glob.glob(os.path.join(RUNSDIR,"*"))
 try:
-    PARAMS, HISTOS = prof.read_rundata(INDIRS, opts.PNAME)
-    RUNS, PARAMNAMES, PARAMSLIST = prof.mk_ipolinputs(PARAMS)
+    PARAMS, HISTOS = prof.ui.read_rundata(INDIRS, opts.PNAME)
+    RUNS, PARAMNAMES, PARAMSLIST = prof.ui.mk_ipolinputs(PARAMS)
 except Exception, e:
     print(e, file=sys.stderr)
     sys.exit(1)
 
 ## Load interpolated histograms from file
-IMETA, IHISTOS = prof.read_ipolhistos(IFILE)
+IMETA, IHISTOS = prof.ui.read_ipolhistos(IFILE)
 print("Loaded ipol histos from", IFILE)
 
 
@@ -119,27 +120,28 @@ for hn, mchistos in HISTOS.iteritems():
     hresval = yoda.Histo1D(hedges, path=hn+"/resval")
     hreserr = yoda.Histo1D(hedges, path=hn+"/reserr")
 
-    ihisto = IHISTOS[hn]
-    for irun, run in enumerate(RUNS):
-        mchisto = mchistos[run]
-        assert mchisto.nbins == ihisto.nbins
-        for ib in xrange(ihisto.nbins):
+    if hn in IHISTOS.keys():
+        ihisto = IHISTOS[hn]
+        for irun, run in enumerate(RUNS):
+            mchisto = mchistos[run]
+            assert mchisto.nbins == ihisto.nbins
+            for ib in xrange(ihisto.nbins):
 
-            ## Value residuals
-            absres = ihisto.bins[ib].val(PARAMSLIST[irun]) - mchisto.bins[ib].val
-            # print(irun, ib, absres)
-            if mchisto.bins[ib].val != 0:
-                relres = absres / mchisto.bins[ib].val
-                hresval.fill(relres)
-                hresvaltot.fill(relres)
+                ## Value residuals
+                absres = ihisto.bins[ib].val(PARAMSLIST[irun]) - mchisto.bins[ib].val
+                # print(irun, ib, absres)
+                if mchisto.bins[ib].val != 0:
+                    relres = absres / mchisto.bins[ib].val
+                    hresval.fill(relres)
+                    hresvaltot.fill(relres)
 
-            ## Error residuals
-            # print(ihisto.bins[ib].err(PARAMSLIST[irun]) , mchisto.bins[ib].err)
-            absres = ihisto.bins[ib].err(PARAMSLIST[irun]) - mchisto.bins[ib].err
-            if mchisto.bins[ib].err != 0:
-                relres = absres / mchisto.bins[ib].err
-                hreserr.fill(relres)
-                hreserrtot.fill(relres)
+                ## Error residuals
+                # print(ihisto.bins[ib].err(PARAMSLIST[irun]) , mchisto.bins[ib].err)
+                absres = ihisto.bins[ib].err(PARAMSLIST[irun]) - mchisto.bins[ib].err
+                if mchisto.bins[ib].err != 0:
+                    relres = absres / mchisto.bins[ib].err
+                    hreserr.fill(relres)
+                    hreserrtot.fill(relres)
 
     if not opts.ONLY_TOT:
         aos += [hresval, hreserr]
