@@ -14,15 +14,15 @@ ext = Extension("professor2.core",
                 language="C++",
                 depends=glob("../include/*.h"),
                 include_dirs=[incdir, os.path.join(srcdir, "pyext", "professor2")],
-                extra_compile_args="-std=c++11 -Wno-unused-but-set-variable -Wno-sign-compare".split(),
+                extra_compile_args="-std=c++11 -Wno-unused-but-set-variable -Wno-sign-compare -O4".split(),
                 library_dirs=[libdir],
                 runtime_library_dirs=[],
                 libraries=["Professor2"])
 
 setup(name = "professor2",
-      version="2.0.0",
+      version="2.2.alpha",
       ext_modules = [ext],
-      packages = ["professor2"],
+      packages = ["professor2", "professor2/ui", "professor2/misc"],
       package_dir = {"": "pyext"},
       description="Professor version 2",
       author="Professor collaboration",
